--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <a class="logo" href="{{site.baseurl}}/index.html">InMyShoes</a>
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <ul class="menu">
-        <li><a href="/home.html">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="/about.html">About</a></li>
       </ul>
     </div>
