--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,16 +6,16 @@ layout: default
 <p>I've had the privilege of meeting incredible personalities from all walks of life; working within different professions with unique goals and personal values. However, one thing they do have in common, is the fact that they had inspired me to be a better version of myself; to push towards my own goals and to see my own values in a different perspective. These are the stories of those people.</p>
 
 <div class="blogGalleryMain">
-  {% for gallery in site.data.inmyshoes %}
-    {% for image in gallery.images %}
+  {% for profiles in site.data.inmyshoes %}
+    {% for person in profiles.people %}
       <div class="portraitsBlog">
-        <h2 class="blogName">{{ image.name }}</h2>
-          <a href="profiles/{{ image.name}}.html">
-            <img class="blogImage" src="{{ gallery.imagefolder }}/{{ image.filename }}">
+        <h2 class="blogName">{{ person.name }}</h2>
+          <a href="profiles/{{ person.name}}.html">
+            <img class="blogImage" src="{{ profiles.imagefolder }}/{{ person.filename }}">
           </a>
         <div class="stats">
-          <p>Occupation: {{ image.occupation }}</p>
-          <p>{{ image.factCategory }}: {{ image.factFact }} </p>
+          <p>Occupation: {{ person.occupation }}</p>
+          <p>{{ person.factCategory }}: {{ person.factFact }} </p>
         </div>
       </div>
     {% endfor %}
