--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,13 @@
 <header class="header">
   <div class="site-header">
-    <a class="logo" href="{{site.baseurl}}/index.html">InMyShoes</a>
+    <h1 class="title">InMyShoes</h1>
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-      <ul class="menu">
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/about.html">About</a></li>
-      </ul>
+      <div class="header_links">
+        <ul>
+          <li><a href="/index.html">Home</a></li>
+          |
+          <li><a href="/about.html">About</a></li>
+        </ul>
+      </div>
     </div>
 </header>
