--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,9 @@
 $darkest: #293844;
 $dark: #404640;
-$purply: #9791a0;
-$pinkish: #d8aeae;
+$shadows: #9791a0;
+$highlights: #d8aeae;
 $basecolor: #fff1dd;
+
+$small: 320px;
+$medium: 768px;
+$large: 960px;
