--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,10 @@
 
     {%- include header.html -%}
 
-    <main class"page-content">
+    <main>
+      <div class="wrapper">
           {{ content }}
+      </div>
     </main>
 
     {%- include footer.html -%}
