create grid for cards

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="site-header">
     <h1 class="title">InMyShoes</h1>
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-      <div class="header_links">
+      <div class="header-links">
         <ul>
           <li><a href="/index.html">Home</a></li>
           |
