--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,10 +4,10 @@ layout: default
 
 <p>I've had the privilege of meeting incredible personalities from all walks of life; working within different professions with unique goals and personal values. However, one thing they do have in common, is the fact that they had inspired me to be a better version of myself; to push towards my own goals and to see my own values in a different perspective. These are the stories of those people.</p>
 
-<div class="blogGalleryMain">
+<div class="card-container">
   {% for profiles in site.data.inmyshoes %}
     {% for person in profiles.people %}
-      <div class="portraitsBlog">
+      <div class="card">
         <h2 class="blogName">{{ person.name }}</h2>
           <a href="profiles/{{ person.name}}.html">
             <img class="blogImage" src="{{ profiles.imagefolder }}/{{ person.filename }}">
