--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -13,8 +13,9 @@
   align-items: center;
   justify-content: center;
   img {
-    box-shadow: 5px 5px 5px grey;
+    box-shadow: 5px 5px 5px $shadows;
     border-radius: 5px;
+    transition: 0.3s;
   }
   img:hover {
     opacity: 0.60;
