--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,11 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
+
 body {
   background-color: $basecolor;
 }
@@ -9,4 +17,11 @@ body {
 
 img {
   width: 100%;
+}
+
+.description {
+  font-size: 1.5vw;
+  width: 70%;
+  text-align: center;
+  margin: 0 auto;
 }
