--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer>
   <div class="site-footer">
     <div class="social">
-      <a href='https://www.linkedin.com/in/dannychachang/' target="_blank">linkedin</a>
-      <a href='https://github.com/pacemade' target="_blank">github</a>
-      <a href='mailto:dannychachang@gmail.com' target="_blank">email</a>
-      <a href='https://www.instagram.com/pacemade/' target="_blank">ig</a>
+      <a href='https://www.linkedin.com/in/dannychachang/' target="_blank"><img src="/assets/images/icons/linkedinIcon.png" alt="" class="social-icon"></a>
+      <a href='https://github.com/pacemade' target="_blank"><img src="/assets/images/icons/githubIcon.png" alt="" class="social-icon"></a>
+      <a href='mailto:dannychachang@gmail.com' target="_blank"><img src="/assets/images/icons/emailIcon.png" alt="" class="social-icon"></a>
+      <a href='https://www.instagram.com/pacemade/' target="_blank"><img src="/assets/images/icons/igIcon.png" alt="" class="social-icon"></a>
     </div>
     <div class="copyright">
       <h5>&copy; 2018 Danny Chang</h5>
