add font and styling for icons

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -4,6 +4,9 @@ html, body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
+  // font-family: 'Nunito', sans-serif;
+  // font-family: 'Roboto Slab', serif;
+  font-family: 'Rubik', sans-serif;
 }
 
 body {
