--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -6,7 +6,6 @@
 }
 
 .card {
-  // border: 5px $highlights solid;
   text-align: center;
   position: relative;
   display: flex;
@@ -34,8 +33,8 @@
     right: 0;
     pointer-events:none;
     transition: 0.3s;
-
     p {
+      font-size: 1.3em;
       cursor: pointer;
     }
   }
