--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -14,8 +14,9 @@
   }
   li {
     display: inline-block;
+    color: $dark;
   }
-  a {
+  a, li {
     font-size: 3.0vh;
   }
   a:link, a:visited {
