styling for profile page, finally got profile head picture to fit properly

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
         <div class="stats">
           <p>{{ person.name }}</p>
           <p>Occupation: {{ person.occupation }}</p>
-          <p>{{ person.factCategory }}: {{ person.factFact }} </p>
+          <p>Favorite {{ person.factCategory }}: {{ person.factFact }} </p>
         </div>
       </div>
     {% endfor %}
