--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -6,12 +6,13 @@ layout: default
   {% for person in profiles.people %}
     {% if person.name == page.person %}
     <div class="profile_wrapper">
-      <h1 class="profile_name">{{ person.name }}</h1>
+      <div class="profile_header">
+        <h1>{{ person.name }}</h1>
+        <h2>{{ person.occupation }}</h2>
+      </div>
       <div class="head_profile">
         <img src="/assets/images/portraits/{{ person.filename }}" alt="">
       </div>
-      <h2>{{ person.occupation }}</h2>
-      <h2>Favorite {{ person.factCategory }}: {{ person.factFact }}</h2>
       <p> {{ content }} </p>
     </div>
     {% endif %}
