include youtube playlist link on profile page

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -13,6 +13,9 @@ layout: default
       <div class="head_profile">
         <img src="/assets/images/portraits/{{ person.filename }}" alt="">
       </div>
+      <div class="playlists">
+        <a href="{{ person.playlistLink }}" target="_blank">Youtube</a>
+      </div>
       <p> {{ content }} </p>
     </div>
     {% endif %}
