--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -10,7 +10,6 @@
   }
 }
 
-
 .profile_header {
   text-align: center;
   h1 {
@@ -19,4 +18,9 @@
   h2 {
     font-size: 1.5em;
   }
+}
+
+.playlists {
+  text-align: center;
+  
 }
