split name into first and last, kept name so profiles load properly

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
             <img class="blogImage" src="{{ profiles.imagefolder }}/{{ person.filename }}">
           </a>
         <div class="stats">
-          <p>{{ person.name }}</p>
+          <p>{{ person.firstName }} {{ person.lastName }}</p>
           <p>Occupation: {{ person.occupation }}</p>
           <p>Favorite {{ person.factCategory }}: {{ person.factFact }} </p>
         </div>
