--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -7,14 +7,15 @@ layout: default
     {% if person.name == page.person %}
     <div class="profile_wrapper">
       <div class="profile_header">
-        <h1>{{ person.name }}</h1>
+        <h1>{{ person.firstName }} {{ person.lastName }}</h1>
         <h2>{{ person.occupation }}</h2>
       </div>
       <div class="head_profile">
         <img src="/assets/images/portraits/{{ person.filename }}" alt="">
       </div>
       <div class="playlists">
-        <a href="{{ person.playlistLink }}" target="_blank">Youtube</a>
+        <p> Get in my shoes while you read:
+        <a href="{{ person.playlistLink }}" target="_blank">Linky link</a></p>
       </div>
       <p> {{ content }} </p>
     </div>
