change tagline for playlist, still not sure

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
           </a>
         <div class="stats">
           <p>{{ person.firstName }} {{ person.lastName }}</p>
-          <p>Occupation: {{ person.occupation }}</p>
+          <p>{{ person.occupation }}</p>
           <p>Favorite {{ person.factCategory }}: {{ person.factFact }} </p>
         </div>
       </div>
