chnge name of site

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -14,7 +14,7 @@ layout: default
         <img src="/assets/images/portraits/{{ person.filename }}" alt="">
       </div>
       <div class="playlists">
-        <p> Tracks for {{ person.firstName }}:
+        <p> Tracks curated by {{ person.firstName }}:
         <a href="{{ person.playlistLink }}" target="_blank">Linky link</a></p>
       </div>
       <p> {{ content }} </p>
