--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="site-header">
-    <h1 class="title">InMyShoes</h1>
+    <h1 class="title">The Intro</h1>
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <div class="header-links">
         <ul>
