--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -27,7 +27,8 @@ img {
   text-align: center;
   margin: 0 auto;
   p {
-    font-size: 1.5em;
+    font-size: 2.0em;
     color: $darkest;
+    font-style: italic;
   }
 }
