styling for quotes, edited tylers profile, and a lot more oops

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 <div class="description">
-  <!-- <p>I've had the privilege of meeting incredible personalities from all walks of life; working within different professions with unique goals and personal values. However, one thing they do have in common, is the fact that they had inspired me to be a better version of myself; to push towards my own goals and to see my own values in a different perspective. These are the stories of those people.</p> -->
   <p> An introduction to introspectives</p>
+  <h3>I've had the privilege of meeting incredible personalities from all walks of life; working within different professions with unique goals and personal values. However, one thing they do have in common, is the fact that they had inspired me to be a better version of myself; to push towards my own goals and to see my own values in a different perspective. These are the stories of those people.</p>
 </div>
 
 <div class="card-container">
