configured to deploy to s3

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -15,9 +15,12 @@ layout: default
       </div>
       <div class="playlists">
         <p> Tracks curated by {{ person.firstName }}:
-        <a href="{{ person.playlistLink }}" target="_blank">Linky link</a></p>
+        <a href="{{ person.playlistLink }}" target="_blank">Youtube Playlist</a></p>
       </div>
       <p> {{ content }} </p>
+      <div class="disclaimer">
+        <p><i>This interview was edited for clarity, names of individuals have been changed to respect their privacy</i><p>
+      </div>
     </div>
     {% endif %}
   {% endfor %}
