--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <<title>The Intro</title>
+  <title>The Intro</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> -->
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
