get rid of placeholders, real deals only

--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -1,53 +1,9 @@
-// .card-container {
-//   display: grid;
-//   grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-//   grid-gap: 1rem;
-//   padding: 1rem;
-// }
-//
-// .card {
-//   text-align: center;
-//   position: relative;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   img {
-//     box-shadow: 5px 5px 5px $shadows;
-//     border-radius: 5px;
-//     transition: 0.3s;
-//   }
-//   img:hover {
-//     opacity: 0.60;
-//     transition: 0.3s;
-//     transform: translate(5px, 5px);
-//     box-shadow: none;
-//   }
-//   a:hover + .stats {
-//     display: block;
-//   }
-//   .stats {
-//     color: $darkest;
-//     display: none;
-//     position: absolute;
-//     left: 0;
-//     right: 0;
-//     pointer-events:none;
-//     transition: 0.3s;
-//     p {
-//       font-size: 1.3em;
-//       cursor: pointer;
-//     }
-//   }
-// }
-
-
 .card-container {
   column-count: 1;
   column-gap: 1em;
 }
 
 .card {
-
   display: inline-block;
   margin: 0 0 1em;
   width: 100%;
@@ -90,3 +46,47 @@
     column-count: 2
   }
 }
+
+// ------- OLD NON MASONRY LAYOUT USING GRIDS ---------
+
+// .card-container {
+//   display: grid;
+//   grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+//   grid-gap: 1rem;
+//   padding: 1rem;
+// }
+//
+// .card {
+//   text-align: center;
+//   position: relative;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   img {
+//     box-shadow: 5px 5px 5px $shadows;
+//     border-radius: 5px;
+//     transition: 0.3s;
+//   }
+//   img:hover {
+//     opacity: 0.60;
+//     transition: 0.3s;
+//     transform: translate(5px, 5px);
+//     box-shadow: none;
+//   }
+//   a:hover + .stats {
+//     display: block;
+//   }
+//   .stats {
+//     color: $darkest;
+//     display: none;
+//     position: absolute;
+//     left: 0;
+//     right: 0;
+//     pointer-events:none;
+//     transition: 0.3s;
+//     p {
+//       font-size: 1.3em;
+//       cursor: pointer;
+//     }
+//   }
+// }
