home and about has padding

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -16,6 +16,10 @@
     display: inline-block;
     color: $dark;
   }
+  a {
+    padding-left: 1vw;
+    padding-right: 1vw;
+  }
   a, li {
     font-size: 3.0vw;
   }
