increased line height

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -14,10 +14,10 @@ layout: default
         <img src="/assets/images/portraits/{{ person.filename }}" alt="">
       </div>
       <div class="playlists">
-        <p> Tracks curated by {{ person.firstName }}:
-        <a href="{{ person.playlistLink }}" target="_blank">Youtube Playlist</a></p>
+        <h4> Tracks curated by {{ person.firstName }}:
+        <a href="{{ person.playlistLink }}" target="_blank">Youtube Playlist</a></h4>
       </div>
-      <p> {{ content }} </p>
+      {{ content }} 
       <br>
       <div class="disclaimer">
         <p><i>This interview was edited for clarity, names of individuals have been changed to respect their privacy</i><p>
