attempting to make header fixed, updated header fonts to be fixed

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,15 @@
-<header class="header">
-  <div class="site-header">
-    <h1 class="title">The Intro</h1>
-    <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-      <div class="header-links">
-        <ul>
-          <li><a href="/index.html">Home </a></li>
-          <li>|</li>
-          <li><a href="/about.html"> About</a></li>
-        </ul>
+<div class="header-container">
+  <header class="header">
+    <div class="site-header">
+      <h1 class="title">The Intro</h1>
+      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+        <div class="header-links">
+          <ul>
+            <li><a href="/index.html">Home </a></li>
+            <li>|</li>
+            <li><a href="/about.html"> About</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-</header>
+  </header>
+</div>
