position fixed the header, just the header for now, works and links can be clicked

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -25,6 +25,18 @@
   }
 }
 
+.header-container {
+  position: fixed;
+  width: 100%;
+  top: 0px;
+}
+
+.header {
+  margin: 0 auto;
+
+}
+
+
 @media only screen and (min-width: $medium) {
   .title {
     font-size: 8em;
@@ -35,16 +47,3 @@
     }
   }
 }
-
-
-//
-// .header-container {
-//   position: fixed;
-//   width: 100%;
-//   top: 0px;
-//
-// }
-//
-// .header {
-//   margin: 0 auto;
-// }
