--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -17,7 +17,8 @@ body {
   width: 95%;
   margin: 3em auto;
   background-color: $basecolor;
-  margin-top: 350px;
+  margin-top: 325px;
+  padding-top: 25px;
   z-index: 9999;
   position: relative;
 }
