--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -48,15 +48,14 @@
   }
 }
 
+// weird workaround for now for single display when screen is too small
 .profile_double {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
+  // grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
   grid-gap: 1rem;
   padding: 1rem;
   padding-bottom: 30px;
-  img {
-    max-height: 100%;
-  }
+
 }
 
 .quote {
@@ -72,5 +71,11 @@
   .profile_wrapper {
     width: 75%;
     margin: 3em auto;
+  }
+  .profile_double {
+    grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
+    img {
+      max-height: 100%;
+    }
   }
 }
