--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
   <h3>I've had the privilege of meeting incredible personalities from all walks of life; working within different professions with unique goals and personal values. However, one thing they do have in common, is the fact that they had inspired me to be a better version of myself; to push towards my own goals and to see my own values in a different perspective. These are the stories of those people.</h3>
 </div>
 
-<div class="card-container">
+<!-- <div class="card-container">
   {% for profiles in site.data.inmyshoes %}
     {% for person in profiles.people %}
       <div class="card">
@@ -20,5 +20,19 @@ layout: default
         </div>
       </div>
     {% endfor %}
+  {% endfor %}
+</div> -->
+<div class="card-container">
+  {% for profile in site.profiles %}
+    <div class="card">
+        <a href={{ profile.url }}>
+          <img class="blogImage" src={{ profile.profileImage }}>
+        </a>
+      <div class="stats">
+        <p>{{ profile.firstName }} {{ profile.lastName }}</p>
+        <p>{{ profile.occupation }}</p>
+        <p>Favorite {{ profile.factCategory }}: {{ profile.factFact }} </p>
+      </div>
+    </div>
   {% endfor %}
 </div>
