--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -2,27 +2,20 @@
 layout: default
 ---
 
-{% for profiles in site.data.inmyshoes %}
-  {% for person in profiles.people %}
-    {% if person.name == page.person %}
-    <div class="profile_wrapper">
-      <div class="profile_header">
-        <h1>{{ person.firstName }} {{ person.lastName }}</h1>
-        <h2>{{ person.occupation }}</h2>
-      </div>
-      <div class="head_profile">
-        <img src="/assets/images/portraits/{{ person.filename }}" alt="">
-      </div>
-      <div class="playlists">
-        <h4> Tracks curated by {{ person.firstName }}:
-        <a href="{{ person.playlistLink }}" target="_blank">Youtube Playlist</a></h4>
-      </div>
-      {{ content }}
-      <div class="disclaimer">
-        <p><i>This interview was edited for clarity, names of individuals have been changed to respect their privacy</i><p>
-      </div>
-
-    </div>
-    {% endif %}
-  {% endfor %}
-{% endfor %}
+<div class="profile_wrapper">
+  <div class="profile_header">
+    <h1>{{ page.firstName }} {{ page.lastName }}</h1>
+    <h2>{{ page.occupation }}</h2>
+  </div>
+  <div class="head_profile">
+    <img src={{ page.profileImage }} alt="">
+  </div>
+  <div class="playlists">
+    <h4> Tracks curated by {{ person.firstName }}:
+    <a href="{{ person.playlistLink }}" target="_blank">Youtube Playlist</a></h4>
+  </div>
+  {{ content }}
+  <div class="disclaimer">
+    <p><i>This interview was edited for clarity, names of individuals have been changed to respect their privacy</i><p>
+  </div>
+</div>
