--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -18,4 +18,64 @@ layout: default
   <div class="disclaimer">
     <p><i>This interview was edited for clarity, names of individuals have been changed to respect their privacy</i><p>
   </div>
+  
+  <!-- creates if statements for previous and next post -->
+
+  {% for c in site.profiles %}
+  {% if c.title == page.title %}
+    {% assign thisPost = c %}
+    {% if forloop.index == 1 %}
+      {% assign prevflag = 0 %}
+      {% assign nextflag = 1 %}
+    {% elsif forloop.index == forloop.length %}
+      {% assign prevflag = 1 %}
+      {% assign nextflag = 0 %}
+    {% else %}
+      {% assign prevflag = 1 %}
+      {% assign nextflag = 1 %}
+    {% endif %}
+  {% endif %}
+  {% endfor %}
+
+  {% for c in site.profiles %}
+    {% if c.title == page.title %}
+      {% assign prevflag = 0 %}
+    {% endif %}
+    {% if prevflag == 1 %}
+      {% assign prevPost = c %}
+      {% assign page.previous = c %}
+    {% endif %}
+  {% endfor %}
+
+  {% if nextflag == 1 %}
+    {% for c in site.profiles %}
+      {% if foundPost == 1 %}
+        {% assign getNext = 1 %}
+      {% endif %}
+      {% if c.title == page.title %}
+        {% assign foundPost = 1 %}
+      {% endif %}
+      {% if getNext == 1%}
+        {% assign nextPost = c %}
+        {% assign page.next = c %}
+        {% assign foundPost = 0 %}
+        {% assign getNext = 0 %}
+      {% endif %}
+    {% endfor %}
+  {% endif %}
+
+  <div class="prev_next">
+    <div >
+      {% if prevPost.url %}
+      <a class="prev" href="{{prevPost.url}}">
+          <span>&lt; {{prevPost.title}}</span>
+      </a>
+      {% endif %}
+      {% if nextPost.url %}
+      <a class="next" href="{{nextPost.url}}">
+          <span>{{nextPost.title}} &gt;</span>
+      </a>
+      {% endif %}
+    </div>
+  </div>
 </div>
