--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -11,7 +11,6 @@
   }
   h3 {
     padding: 0px 20px 10px 20px;
-
   }
 }
 
@@ -32,13 +31,20 @@
   }
 }
 
-.playlists {
-  text-align: center;
+.next {
+  float: right;
 }
 
 .disclaimer {
   text-align: center;
 }
+
+.playlists {
+  text-align: center;
+}
+
+
+// profile image & quote containers -------
 
 .profile_extra1 {
   img {
@@ -48,10 +54,8 @@
   }
 }
 
-// weird workaround for now for single display when screen is too small
 .profile_double {
   display: grid;
-  // grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
   grid-gap: 1rem;
   padding: 1rem;
   padding-bottom: 30px;
