--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -99,14 +99,26 @@
 }
 
 @media only screen and (min-width: $medium) {
+
+  .profile_header {
+    h1 {
+      font-size: 2.5em;
+    }
+    h2 {
+      font-size: 2.0em;
+    }
+  }
+  
   .profile_wrapper {
     width: 85%;
     margin: 3em auto;
   }
+
   .profile_double {
     grid-template-columns: repeat(auto-fit, minmax(30vw, 1fr));
     img {
       max-height: 100%;
     }
   }
+
 }
