new oswald and reading font, profile, header, quotes and cards updated with appropriate fonts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
   <title>The Intro</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet"> -->
   <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
   <link rel="stylesheet" href="{{ root_url }}/css/styles.css">
 </head>
