--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -58,6 +58,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: 'Oswald', sans-serif;
   img {
     height: 60vh;
     object-fit: cover;
