--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -5,6 +5,10 @@
   margin-bottom: 30px;
 }
 
+.site-header {
+  font-family: 'Oswald', sans-serif;
+}
+
 .header-links {
   ul {
     list-style-type: none;
