--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -26,6 +26,7 @@
 
 .profile_header {
   text-align: center;
+  font-family: 'Oswald', sans-serif;
   h1 {
     font-size: 2em;
   }
@@ -68,6 +69,7 @@
 .quote {
   text-align: center;
   border-left: 3px solid $shadows;
+  font-family: 'Oswald', sans-serif;
   h2 {
     color: $shadows;
     font-size: 2em;
