--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,7 +7,8 @@ html, body {
   // overflow-x: hidden;
   // font-family: 'Nunito', sans-serif;
   // font-family: 'Roboto Slab', serif;
-  font-family: 'Rubik', sans-serif;
+  // font-family: 'Rubik', sans-serif;
+  font-family: 'IBM Plex Serif', serif;
 }
 
 body {
