small updates with grammar corrections for yannie and tyler

--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -59,6 +59,9 @@
   align-items: center;
   justify-content: center;
   font-family: 'Oswald', sans-serif;
+  hr {
+    width: 60%;
+  }
   img {
     height: 60vh;
     object-fit: cover;
