--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,5 +1,7 @@
 ---
 layout: default
 ---
-
-<h1>This is the About Page and it's clearly not finished yet</h1>
+<div class="about_wrapper">
+  <img class="about_profile" src="/assets/images/portraits/danny_chang.jpg" alt="">
+  <p class="about_description">Danny enjoys music, doodling and apparently has a knack for getting people to open up. He enjoys long walks in general and hopes to one day own a cat.</p>
+</div>
