--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -8,7 +8,7 @@ layout: default
     <h2>{{ page.occupation }}</h2>
   </div>
   <div class="head_profile">
-    <img src={{ page.profileImage }} alt="">
+    <img src={{ page.headImage }} alt="">
   </div>
   <div class="playlists">
     <h4> Tracks curated by {{ page.firstName }}:
