resizing all fonts to perfect fifth scale

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,7 +1,7 @@
 .title {
   color: $darkest;
   text-align: center;
-  font-size: 5em;
+  font-size: 11.089em;
   margin-bottom: 30px;
 }
 
@@ -42,11 +42,11 @@
 // title font changes
 @media only screen and (min-width: $medium) {
   .title {
-    font-size: 8em;
+    font-size: $font6;
   }
   .header-links {
     a, li {
-      font-size: 1.5em;
+      font-size: $font2;
     }
   }
 }
