--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -2,7 +2,16 @@ $darkest: #293844;
 $dark: #404640;
 $shadows: #9791a0;
 $highlights: #d8aeae;
-$basecolor: #fff1dd;
+$basecolor: rgb(251, 219, 176);
+//
+// #fff1dd
+
+$font6: 7.594em;
+$font5: 5.063em;
+$font4: 3.375em;
+$font3: 2.25em;
+$font2: 1.5em;
+$font1: 1em;
 
 $small: 320px;
 $medium: 768px;
