--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -8,7 +8,7 @@
     padding: 0px 30px 30px 30px;
   }
   p {
-    line-height: 1.7;
+    line-height: 1.5em;
     padding: 0px 30px 30px 30px;
   }
   h3 {
