--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -3,8 +3,7 @@ html, body {
   height: 100%;
   margin: 0px;
   padding: 0px;
-  // dont remember what this overflox-x hidden was even for
-  // overflow-x: hidden;
+  font-size: 16px;
   // font-family: 'Nunito', sans-serif;
   // font-family: 'Roboto Slab', serif;
   // font-family: 'Rubik', sans-serif;
@@ -49,20 +48,22 @@ a:hover {
   margin: 0 auto;
   padding-bottom: 25px;
   p {
-    font-size: 2.0em;
+    font-size: $font2;
     color: $darkest;
     font-style: italic;
   }
   h3 {
+    font-size: $font1;
     color: $darkest;
   }
 }
 
 // margin change to accomadate font size change
 @media only screen and (min-width: $medium) {
+  html, body {
+    font-size: 18px;
+  }
   .wrapper {
     width: 85%;
-    // margin-top: 325px;
-      // padding-top: 25px;
   }
 }
